--- a/style.css
+++ b/style.css
@@ -10,10 +10,14 @@ h1{
 }
 .half-width{
     width: 40%;
-    float: left;
+    
     margin-left: 5%;
     padding-left: 2%;
+    
 }
 .half-width img{
     width: 100%;
+}
+#top-banner{
+    background-image: url( "images/banner.png" );
 }
