--- a/style.css
+++ b/style.css
@@ -1,23 +1,83 @@
 
 body{
+    margin: 0;
     font-family: 'poppins', sans-serif;
 }
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+    color: grey;
+}
+h3{font-size: 25px;}
+.orange-highlight{
     color:#ffa500;
+}
+p{
+    color: dimgray;
 }
 .half-width{
     width: 40%;
-    
+    float: left;
     margin-left: 5%;
     padding-left: 2%;
-    
+    text-align: justify;
 }
 .half-width img{
     width: 100%;
-}
-#top-banner{
+    }
+.top-banner{
     background-image: url( "images/banner.png" );
+    background-repeat: no-repeat;
+   }
+section{
+    height: 500px;
+    bottom: padding 50px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, skyblue, #FFA500);
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin: 50px;
+    color: white;
+    font-weight: bold;
+}
+.dream-area{
+background-image: url(images/dream-bg.png);
+background-repeat:no-repeat;
+background-position: right;
+}
+#special{
+    font-size: 50px;
+    color: burlywood;
+    margin-left: 65px;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px grey;
+    border-radius: 10px;
+    height: 50%;
+    text-align: justify;
+    padding-right: 8px;
+    background-color: lightblue;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient( lightsalmon,tomato);
+    border-image-slice: 1;
+}
+#Baby{
+    border-left: 7px solid;
+    border-image: linear-gradient( rgb(116, 21, 194),rgb(70, 16, 219));
+    border-image-slice : 1;
+    
+}
+footer p{
+    text-align: center;
 }
